--- a/index.html
+++ b/index.html
@@ -62,8 +62,17 @@
             <!-- barra superiore del main -->
             <div class="container-fluid main_top">
                 <div class="row">
-                    <div class="col-12">
-                        <div class="content h_200"></div>
+                    <div class="col-12 col-md-4">
+                        <!-- nuovo studente -->
+                        <div class="content h_200 bg-danger"></div>
+                    </div>
+                    <div class="col-12 col-md-4">
+                        <!-- Boolean app -->
+                        <div class="content h_200 bg-danger"></div>
+                    </div>
+                    <div class="col-12 col-md-4">
+                        <!-- studenti online -->
+                        <div class="content h_200 bg-danger"></div>
                     </div>
                 </div>
             </div>
