--- a/index.html
+++ b/index.html
@@ -87,39 +87,79 @@
                         <div class="row">
                             <div class="col-12">
                                 <!-- contenitore sezione prossime classi -->
-                                <div class="content bg-success">
+                                <div class="content my-3">
                                     <div class="card">
                                         <div class="card-header">
-                                          Featured
+                                          Prossime classi
                                         </div>
                                         <ul class="list-group list-group-flush">
                                           <li class="list-group-item">
                                             <table class="table">
                                                 <thead>
                                                   <tr>
-                                                    <th scope="col">#</th>
-                                                    <th scope="col">First</th>
-                                                    <th scope="col">Last</th>
-                                                    <th scope="col">Handle</th>
+                                                    <th scope="col" class="w-50">Nome</th>
+                                                    <th scope="col" class="d-none d-md-table-cell">Data inizio</th>
+                                                    <th scope="col" class="d-none d-md-table-cell">ROI</th>
+                                                    <th scope="col">Stato</th>
+                                                    <th scope="col">Azioni</th>
                                                   </tr>
                                                 </thead>
                                                 <tbody>
                                                   <tr>
-                                                    <th scope="row">1</th>
-                                                    <td>Mark</td>
-                                                    <td>Otto</td>
-                                                    <td>@mdo</td>
+                                                    <td><i class="fa-solid fa-code text-white bg-danger p-1 rounded-circle"></i><span class="mx-2">Classe 75</span></td>
+                                                    <td class="d-none d-md-table-cell">15 Febbraio 2021</td>
+                                                    <td class="d-none d-md-table-cell">20%</td>
+                                                    <td><span class="badge text-bg-success">Done</span></td>
+                                                    <td><i class="fa-solid fa-pencil mx-1 text-secondary p-1 border border-secondary rounded"></i><i class="fa-solid fa-trash mx-1 text-secondary p-1 border border-secondary rounded"></i></td>
                                                   </tr>
                                                   <tr>
-                                                    <th scope="row">2</th>
-                                                    <td>Jacob</td>
-                                                    <td>Thornton</td>
-                                                    <td>@fat</td>
+                                                    <td><i class="fa-solid fa-code text-white bg-danger p-1 rounded-circle"></i><span class="mx-2">Classe 76</span></td>
+                                                    <td class="d-none d-md-table-cell">16 Febbraio 2021</td>
+                                                    <td class="d-none d-md-table-cell">20%</td>
+                                                    <td><span class="badge text-bg-success">Done</span></td>
+                                                    <td><i class="fa-solid fa-pencil mx-1 text-secondary p-1 border border-secondary rounded"></i><i class="fa-solid fa-trash mx-1 text-secondary p-1 border border-secondary rounded"></i></td>
                                                   </tr>
                                                   <tr>
-                                                    <th scope="row">3</th>
-                                                    <td colspan="2">Larry the Bird</td>
-                                                    <td>@twitter</td>
+                                                    <td><i class="fa-solid fa-code text-white bg-danger p-1 rounded-circle"></i><span class="mx-2">Classe 77</span></td>
+                                                    <td class="d-none d-md-table-cell">17 Febbraio 2021</td>
+                                                    <td class="d-none d-md-table-cell">20%</td>
+                                                    <td><span class="badge text-bg-warning text-white">process</span></td>
+                                                    <td><i class="fa-solid fa-pencil mx-1 text-secondary p-1 border border-secondary rounded"></i><i class="fa-solid fa-trash mx-1 text-secondary p-1 border border-secondary rounded"></i></td>
+                                                  </tr>
+                                                  <tr>
+                                                    <td><i class="fa-solid fa-code text-white bg-danger p-1 rounded-circle"></i><span class="mx-2">Classe 78</span></td>
+                                                    <td class="d-none d-md-table-cell">18 Febbraio 2021</td>
+                                                    <td class="d-none d-md-table-cell">20%</td>
+                                                    <td><span class="badge text-bg-success">Done</span></td>
+                                                    <td><i class="fa-solid fa-pencil mx-1 text-secondary p-1 border border-secondary rounded"></i><i class="fa-solid fa-trash mx-1 text-secondary p-1 border border-secondary rounded"></i></td>
+                                                  </tr>
+                                                  <tr>
+                                                    <td><i class="fa-solid fa-code text-white bg-danger p-1 rounded-circle"></i><span class="mx-2">Classe 79</span></td>
+                                                    <td class="d-none d-md-table-cell">19 Febbraio 2021</td>
+                                                    <td class="d-none d-md-table-cell">20%</td>
+                                                    <td><span class="badge text-bg-danger">failed</span></td>
+                                                    <td><i class="fa-solid fa-pencil mx-1 text-secondary p-1 border border-secondary rounded"></i><i class="fa-solid fa-trash mx-1 text-secondary p-1 border border-secondary rounded"></i></td>
+                                                  </tr>
+                                                  <tr>
+                                                    <td><i class="fa-solid fa-code text-white bg-danger p-1 rounded-circle"></i><span class="mx-2">Classe 80</span></td>
+                                                    <td class="d-none d-md-table-cell">20 Febbraio 2021</td>
+                                                    <td class="d-none d-md-table-cell">20%</td>
+                                                    <td><span class="badge text-bg-success">Done</span></td>
+                                                    <td><i class="fa-solid fa-pencil mx-1 text-secondary p-1 border border-secondary rounded"></i><i class="fa-solid fa-trash mx-1 text-secondary p-1 border border-secondary rounded"></i></td>
+                                                  </tr>
+                                                  <tr>
+                                                    <td><i class="fa-solid fa-code text-white bg-danger p-1 rounded-circle"></i><span class="mx-2">Classe 81</span></td>
+                                                    <td class="d-none d-md-table-cell">21 Febbraio 2021</td>
+                                                    <td class="d-none d-md-table-cell">20%</td>
+                                                    <td><span class="badge text-bg-danger">failed</span></td>
+                                                    <td><i class="fa-solid fa-pencil mx-1 text-secondary p-1 border border-secondary rounded"></i><i class="fa-solid fa-trash mx-1 text-secondary p-1 border border-secondary rounded"></i></td>
+                                                  </tr>
+                                                  <tr>
+                                                    <td><i class="fa-solid fa-code text-white bg-danger p-1 rounded-circle"></i><span class="mx-2">Classe 82</span></td>
+                                                    <td class="d-none d-md-table-cell">22 Febbraio 2021</td>
+                                                    <td class="d-none d-md-table-cell">20%</td>
+                                                    <td><span class="badge text-bg-success">Done</span></td>
+                                                    <td><i class="fa-solid fa-pencil mx-1 text-secondary p-1 border border-secondary rounded"></i><i class="fa-solid fa-trash mx-1 text-secondary p-1 border border-secondary rounded"></i></td>
                                                   </tr>
                                                 </tbody>
                                               </table>
@@ -130,7 +170,51 @@
                             </div>
                             <div class="col-12">
                                 <!-- contenitore sezione FAQ -->
-                                <div class="content h_200 bg-danger"></div>
+                                <div class="content mb-3">
+                                    <div class="card">
+                                        <div class="card-header">
+                                          F.A.Q.
+                                        </div>
+                                            <div class="accordion accordion-flush" id="accordionFlushExample">
+                                                <div class="accordion-item">
+                                                  <h2 class="accordion-header">
+                                                    <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                                                      Come aggiungere un nuovo studente?
+                                                    </button>
+                                                  </h2>
+                                                  <div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#accordionExample">
+                                                    <div class="accordion-body">
+                                                      <strong>This is the first item's accordion body.</strong> It is shown by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                                                    </div>
+                                                  </div>
+                                                </div>
+                                                <div class="accordion-item">
+                                                  <h2 class="accordion-header">
+                                                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                                                      Come posso accedere alle informazioni del mio account?
+                                                    </button>
+                                                  </h2>
+                                                  <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+                                                    <div class="accordion-body">
+                                                      <strong>This is the second item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                                                    </div>
+                                                  </div>
+                                                </div>
+                                                <div class="accordion-item">
+                                                  <h2 class="accordion-header">
+                                                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                                                      Posso usare questa dashboard da mobile?
+                                                    </button>
+                                                  </h2>
+                                                  <div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
+                                                    <div class="accordion-body">
+                                                      <strong>This is the third item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+                                                    </div>
+                                                  </div>
+                                                </div>
+                                              </div>
+                                      </div>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -138,7 +222,45 @@
                         <div class="row">
                             <div class="col-12">
                                 <!-- contenitore sezione Todo -->
-                                <div class="content h_200 bg-warning"></div>
+                                <div class="content my-3">
+                                    <div class="card">
+                                        <div class="card-header">
+                                          Todo
+                                        </div>
+                                        <ul class="list-group list-group-flush">
+                                          <li class="list-group-item">
+                                            <div class="card">
+                                                <ul class="list-group list-group-flush">
+                                                  <li class="list-group-item">
+                                                    <div class="form-check">
+                                                        <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                                                        <label class="form-check-label" for="flexCheckDefault">
+                                                          Kickoff nuove classi
+                                                        </label>
+                                                    </div>
+                                                  </li>
+                                                  <li class="list-group-item">
+                                                    <div class="form-check">
+                                                        <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                                                        <label class="form-check-label" for="flexCheckDefault">
+                                                          Lezione su Bootstrap 5 in classe #75
+                                                        </label>
+                                                    </div>
+                                                  </li>
+                                                  <li class="list-group-item">
+                                                    <div class="form-check">
+                                                        <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                                                        <label class="form-check-label" for="flexCheckDefault">
+                                                          Controllare username github studenti
+                                                        </label>
+                                                    </div>
+                                                  </li>
+                                                </ul>
+                                              </div>
+                                          </li>
+                                        </ul>
+                                      </div>
+                                </div>
                             </div>
                             <div class="col-12">
                                 <!-- contenitore sezione utenti attivi -->
