[STYLE]: effetti hover - sidebar

--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
                     <!-- logo desktop -->
                     <a class="d-none d-lg-block me-3" href="#"><img src="./img/logo.svg" alt="logo"></a>
                     <!-- barra di ricerca -->
-                    <form class="w-100 d-flex align-items-center border rounded" role="search">
+                    <form class="w-100 d-flex align-items-center border rounded bg-secondary-subtle" role="search">
                         <i class="fas fa-magnifying-glass ms-1"></i>
-                        <input class="form-control border-0 me-2" type="search" placeholder="Prova a cercare: Lezioni di Laravel" aria-label="Search">
+                        <input class="form-control border-0 me-2 bg-secondary-subtle" type="search" placeholder="Prova a cercare: Lezioni di Laravel" aria-label="Search">
                     </form>
                 </div>
             </nav>
